# SignupGeniusNotifications

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: canvas.rs  main.rs  signup.rs
