[package]
name = "signup_genius_notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
config = { version = "0.13.1", features = ["toml"] }
serde_json = "1.0.96"
